--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -122,7 +122,7 @@ nav span {
 }
 
 header {
-	padding-top: calc(var(--nav-height) + 16px);
+	padding-top: calc(var(--nav-height) + 32px);
 	height: 100vh;
 	animation: appear 0.3s ease-in-out;
 }
@@ -142,9 +142,11 @@ header a {
 }
 header h1 {
 	color: #000;
+	margin: 16px 0;
 }
 header h2 {
 	padding: 12px;
+	padding-top: 0;
 }
 header figure {
 	display: flex;
@@ -160,7 +162,7 @@ header img {
 	width: 100%;
 	max-width: 250px;
 	border-radius: 50%;
-	box-shadow: 1px 1px 24px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: -1px 1px 12px 1px rgba(0, 0, 0, 0.1);
 }
 .social-networks {
 	display: flex;
@@ -199,8 +201,5 @@ header img {
 	}
 	nav .hidden {
 		display: block;
-	}
-	header h1 {
-		font-size: 4rem;
 	}
 }
