--- a/src/styles/shop_cart.css
+++ b/src/styles/shop_cart.css
@@ -53,16 +53,22 @@ html {
 	background-color: var(--bg);
 	color: var(--text);
 }
-button {
+button,
+select {
 	border-radius: var(--btn-radius);
 	background-color: var(--bg);
 	border: none;
 	padding: 12px 0;
-	color: white;
 	font-weight: 500;
 	background-color: var(--btn-bg);
 	font-size: 0.8rem;
 	cursor: pointer;
+}
+select {
+	background-color: rgb(240, 240, 240);
+}
+button {
+	color: white;
 }
 
 nav {
@@ -154,80 +160,86 @@ nav span {
 	width: 100%;
 	margin-top: 4px;
 }
-header {
-	margin-top: var(--nav-height);
-	animation: appear 0.3s ease-in-out;
+main {
+	margin-top: calc(var(--nav-height));
 }
-header figure {
+.shops-list {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(500px, auto));
+	place-content: center;
+	place-items: center;
+	row-gap: 32px;
+	background-color: var(--bg);
+	padding: 24px 0;
+}
+.shops-list article {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background-color: var(--bg);
-	padding: 16px 0;
-	margin-top: 20px;
+	gap: 24px;
+	max-width: 600px;
+	margin: auto;
 }
-header img {
-	max-width: 300px;
-	right: 0;
-}
-header figcaption {
-	width: 90%;
-	text-align: center;
-	color: black;
-	margin-bottom: 12px;
-	font-size: 0.8rem;
-}
-.list-products {
+.shops-list figure {
+	background-color: var(--box-bg);
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(160px, auto));
-	gap: 16px;
-	padding: 0 16px;
-}
-.product {
-	background-color: var(--box-bg);
+	place-content: center;
+	place-items: center;
 	border-radius: var(--box-radius);
-	padding: 24px;
+	border: 1px solid rgb(232, 232, 232);
+
+	padding: 20px 0;
+}
+.shops-list img {
+	max-width: 100px;
+}
+.shops-list figcaption {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
-	gap: 4px;
-	border: 1px solid rgb(232, 232, 232);
-	animation: appear 0.3s ease-in-out;
+	text-align: left;
+}
+article.payment-resumen {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	place-content: center;
+	padding: 32px;
+	box-shadow: -1px 1px 12px 1px rgba(0, 0, 0, 0.1);
+	border-radius: var(--box-radius);
+	gap: 16px;
 }
 
-@keyframes appear {
-	0% {
-		transform: translateY(-20px);
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0px);
-	}
+.payment-resumen div {
+	border-radius: var(--box-radius);
+	padding: 8px 16px;
+	border: 1px solid rgb(232, 232, 232);
+	color: rgb(105, 126, 128);
 }
-.product figcaption {
-	display: flex;
-	flex-direction: column;
-	gap: 6px;
-	align-items: center;
+.payment-resumen h3 {
+	margin: 8px 0;
+	margin-top: 0;
+	grid-column: 1/-1;
+	color: rgb(0, 0, 0);
+}
+.payment-resumen div:nth-child(4) {
+	grid-column: 1/-1;
 	text-align: center;
 }
-.product button {
-	width: 100%;
-	padding: 12px 0;
+.payment-resumen select {
+	padding: 12px;
+	border: 1px solid rgb(232, 232, 232);
+	color: rgb(105, 126, 128);
 }
-
+.payment-resumen button {
+	width: 100%;
+	max-width: 200px;
+	margin: auto;
+	grid-column: 1/-1;
+}
 .hidden {
 	display: none;
 }
-footer {
-	padding: 32px 0;
-}
-footer small {
-	display: block;
-	text-align: center;
-}
-
 @media screen and (min-width: 600px) {
 	.burger-menu {
 		display: none;
@@ -247,11 +259,11 @@ footer small {
 		font-size: 3rem;
 	}
 }
-@media screen and (min-width: 1200px) {
-	header {
-		height: 95vh;
-	}
-	header h2 {
-		font-size: 5rem;
+@media screen and (min-width: 1000px) {
+	.shops-list article:nth-child(2) {
+		position: fixed;
+		max-width: 550px;
+		right: 10vh;
+		top: 25vh;
 	}
 }
