--- a/server/public/styles/shop_cart.css
+++ b/server/public/styles/shop_cart.css
@@ -188,8 +188,18 @@ main {
 	place-items: center;
 	border-radius: var(--box-radius);
 	border: 1px solid rgb(232, 232, 232);
-
 	padding: 20px 0;
+	animation: appear 0.3s ease-in-out;
+}
+@keyframes appear {
+	0% {
+		transform: translateY(-20px);
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0px);
+	}
 }
 .shops-list img {
 	max-width: 100px;
@@ -236,6 +246,38 @@ article.payment-resumen {
 	max-width: 200px;
 	margin: auto;
 	grid-column: 1/-1;
+}
+
+.loader {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.loader-circle {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	border: 5px solid rgba(0, 0, 0, 0.1);
+	border-top-color: #3498db;
+	animation: spin 1s ease-in-out infinite;
+}
+
+.loader-text {
+	margin-top: 4px;
+	font-size: 1rem;
+	font-weight: bold;
+	text-align: center;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 .hidden {
 	display: none;
