--- a/server/public/styles/index.css
+++ b/server/public/styles/index.css
@@ -7,6 +7,7 @@
 	--box-radius: 8px;
 	--btn-radius: 4px;
 	--btn-bg: rgba(26, 115, 232);
+	--btn-disabled: rgba(26, 115, 232, 0.5);
 }
 
 * {
@@ -279,7 +280,10 @@ header figcaption {
 .abort-products {
 	text-align: center;
 }
-
+.btn-disabled {
+	background-color: var(--btn-disabled);
+	cursor: not-allowed;
+}
 .hidden {
 	display: none;
 }
